[#41172] Add missing joinhandles, correct bitemporal handles, and correct handle usage