@@ -9,6 +9,7 @@ import dk.magenta.datafordeler.cpr.records.person.data.CivilStatusDataRecord;
 import dk.magenta.datafordeler.statistik.utils.CivilStatusFilter;
 
 import javax.servlet.http.HttpServletRequest;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -29,7 +30,8 @@ public class PersonCivilStatusQuery extends PersonStatisticsQuery {
     private static HashMap<String, String> joinHandles = new HashMap<>();
 
     static {
-        joinHandles.putAll(getBitemporalHandles("civilstatus", PersonEntity.DB_FIELD_CIVILSTATUS + LookupDefinition.separator + CivilStatusDataRecord.DB_FIELD_CIVIL_STATUS));
+        joinHandles.put("civilstatus", PersonEntity.DB_FIELD_CIVILSTATUS + LookupDefinition.separator + CivilStatusDataRecord.DB_FIELD_CIVIL_STATUS);
+        joinHandles.putAll(getBitemporalHandles("civilstatus", PersonEntity.DB_FIELD_CIVILSTATUS));
     }
 
     @Override
@@ -41,7 +43,7 @@ public class PersonCivilStatusQuery extends PersonStatisticsQuery {
 
     protected void setupConditions() throws QueryBuildException {
         super.setupConditions();
-        SingleCondition statusCondition = this.addCondition("civilstatus", Condition.Operator.EQ, this.civilStatus != null ? civilStatus : List.of("G", "F", "E", "P", "O", "L", "D"), String.class);
+        SingleCondition statusCondition = this.addCondition("civilstatus", this.civilStatus != null ? Collections.singletonList(civilStatus) : List.of("G", "F", "E", "P", "O", "L", "D"), String.class);
         this.applyBitemporalConditions(statusCondition, "civilstatus");
     }
 }
